# giza-benchmark

./: Cargo.toml
crates/cairo_runner/: Cargo.toml
crates/cairo_runner/src/: utils.rs
examples/trend/: trend.sierra.json
examples/trend_all/: trend_all.sierra.json
