[package]
name = "cairo_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm", rev = "v1.0.0-rc2" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "v1.0.0-rc2", features = ["std", "cairo-1-hints","arbitrary"] }

cairo-lang-sierra = { version = "2.6.4", default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }

